
[workspace]
members = [
    "packages/ruvie",
    "packages/ruvie-css",
    "packages/ruvie-css-codegen",
    "examples/simple/client",
    "examples/simple/server",
]

# [profile.release]
# # This makes the compiled code faster and smaller, but it makes compiling slower,
# # so it's only enabled in release mode.
# lto = true