# You must change these to your own details.
[package]
name = "simple"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
console_error_panic_hook = "0.1.6"
rustweb={path="../../packages/rustweb"}
wasm-bindgen = "*"
observe={path = "../../../observe"}
maplit="*"

# wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "*"
features = ["MouseEvent"]

[dev-dependencies]
# wasm-bindgen-test = "0.2.45"
# futures = "0.1.27"
# js-sys = "0.3.22"
# wasm-bindgen-futures = "0.3.22"
