# You must change these to your own details.
[package]
name = "example-simple"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
console_error_panic_hook = "0.1.6"
ruvie={path="../../packages/ruvie", features=["web", "css"]}
wasm-bindgen = "0.2.62"
observe={path = "../../../observe/packages/observe", features=["wasm-bindgen-futures-0"]}
maplit= "1.0.2"
serde={ version = "1.0.106", features = ["derive"] }
futures= "0.3.4"
reqwest={ version = "0.10.4", features = ["json"] }
anyhow= "1.0.28"
url= "2.1.1"
uuid={version="*", features = ["serde", "v4", "wasm-bindgen"]}
indexmap="*"

# wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.39"
features = ["MouseEvent", "Location"]

[dev-dependencies]
# wasm-bindgen-test = "0.2.45"
# futures = "0.1.27"
# js-sys = "0.3.22"
# wasm-bindgen-futures = "0.3.22"
